--- a/home.html
+++ b/home.html
@@ -16,11 +16,18 @@
                 <li><a href="form.html">Form</a></li>
                 <li><a href="form01.html">New Form</a></li>
                 <li><a href="table.html">Table</a></li>
-                <li><a href="semantic.html">Sementic</a></li>
+                <li><a href="semantic.html">Sementic
+                    <ul class="dropdown">
+                        <li><a href="">link-1</a></li>
+                        <li><a href="">link-2</a></li>
+                        <li><a href="">link-3</a></li>
+                        <li><a href="">link-4</a></li>
+                    </ul>
+                </a></li>
                 <li><a href="aboutUs.html">About Us</a></li>
             </ul>
         </nav>
-        <h1>Welcome to my Web page.</h1>
+        <h1>Welcome to my Web page, Thanks for visiting my page.</h1>
     </header>
     
 </body>
